--- a/index.html
+++ b/index.html
@@ -152,7 +152,18 @@
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>THD</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>UHDB</td><td>365&nbsp;days</td><td>12 months account age.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">GazelleGames.net (GGn)<br>Invite forum unlocks with Pro Gamer user class. All user classes are gained with achievement points.</td></tr>
+<tr><td colspan="3">Empornium (Emp)<br>Invite forum unlocks with Great Perv user class: 100GB upload, 1.05 ratio, 5 torrents uploaded, 8 weeks accout age.<br><br>Sextreme Perv: 1TB upload, 1.05 ratio, 50 torrents uploaded, 13 weeks accout age.</td></tr>
+<tr><th scope="row">Emp<span class="arrow">-&gt;</span>AB</td><td>365&nbsp;days</td><td>Sextreme Perv user class. 12 months account age.</td></tr>
+<tr><th scope="row">Emp<span class="arrow">-&gt;</span>Aither</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">Emp<span class="arrow">-&gt;</span>ANT</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">Emp<span class="arrow">-&gt;</span>GGn</td><td>91&nbsp;days</td><td>3 months account age.</td></tr>
+<tr><th scope="row">Emp<span class="arrow">-&gt;</span>MTV</td><td>182&nbsp;days</td><td>1.5 ratio. 6 months account age.</td></tr>
+<tr><th scope="row">Emp<span class="arrow">-&gt;</span>OPS</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">Emp<span class="arrow">-&gt;</span>PB</td><td>182&nbsp;days</td><td>6 months account age.</td></tr>
+<tr><th scope="row">Emp<span class="arrow">-&gt;</span>SM</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">Emp<span class="arrow">-&gt;</span>UHDB</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">GazelleGames.net (GGn)<br>Invite forum unlocks with Pro Gamer user class. All user classes are gained with achievement points.<br>Additional invite forum unlocks with Legendary Gamer user class.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>AB</td><td>90&nbsp;days</td><td>Elite Gamer user class. 3 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>ANT</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>CGP</td><td>90&nbsp;days</td><td>1.0 real ratio. 3 months account age.</td></tr>
@@ -169,6 +180,7 @@
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>PB</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>PTer</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>PTN</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>Legendary Gamer user class. 1 year account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>PxC</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>PxHD</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>RED</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -333,8 +345,9 @@
 <tr class="spacer"></tr>
 <tr><td colspan="3">LzTr (LzTr)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">BrokenStones (BRKS)<br>Invite forum unlocks with Power User user class: 50GB upload, 1.05 ratio, 1 torrent uploaded.<br><br>Elite User user class: 75GB upload, 1.05 ratio, 10 torrents uploaded.</td></tr>
+<tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr></table>
+<tr><td colspan="3">BrokenStones (BRKS)<br>Invite forum unlocks with Power User user class: 50GB upload, 1.05 ratio, 1 torrent uploaded.<br><br>Elite User user class: 75GB upload, 1.05 ratio, 10 torrents uploaded.</td></tr><tr class="spacer"></tr>
+</table>
 </body>
 </html>
