--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>PB</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>PTer</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>PTN</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>Legendary Gamer user class. 1 year account age.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>Master Gamer user class. 1 year account age.<br>Thread is in the Legendary Gamer invite forum.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>PxC</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>PxHD</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>RED</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -195,6 +195,7 @@
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>BtW</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>BRKS</td><td>365&nbsp;days</td><td>1.51 ratio. 1 year account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>CGP</td><td>180&nbsp;days</td><td>1TB upload. 6 months account age.</td></tr>
+<tr><th scope="row">MAM<span class="arrow">-&gt;</span>DCC</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>Milkie</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>MyXZ</td><td>365&nbsp;days</td><td>1 other tracker profile with 1 year account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>NBL</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
