--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
 <th scope="col">Required&nbsp;age</th>
 <th scope="col">Additional&nbsp;information</th>
 </tr>
-<tr><td colspan="3">AnimeBytes (AB)<br>Invite forum unlocks with Power User user class: 25GB upload, 0.7 ratio, 10 torrents uploaded, 2 weeks account age.</td></tr>
+<tr><td colspan="3">AnimeBytes (AB)<br>Invite forum unlocks with Power User user class: 25GB upload, 0.7 ratio, 10 torrents uploaded, 2 weeks account age.<br><br>Torrent Master user class: 500GB upload, 0.9 ratio, 100 torrents uploaded, 90 days account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>ACM</td><td>14&nbsp;days</td><td>4TB upload. 6 months account age.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>Aither</td><td>14&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>ANT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>BBT</td><td>14&nbsp;days</td><td>6 months account age. Seeding at least half of your snatched torrents.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>CCS</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>D3</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>DIC</td><td>14&nbsp;days</td><td>10 music uploads, or 15 other uploads.</td></tr>
@@ -88,6 +90,7 @@
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>MTV</td><td>180&nbsp;days</td><td>1.5 ratio. 6 months account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>NBL</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>OPS</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>Torrent Master user class. 1 year account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>PxC</td><td>30&nbsp;days</td><td>1 month account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>PxHD</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>RED</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -152,7 +155,7 @@
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>THD</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span>UHDB</td><td>365&nbsp;days</td><td>12 months account age.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">Empornium (Emp)<br>Invite forum unlocks with Great Perv user class: 100GB upload, 1.05 ratio, 5 torrents uploaded, 8 weeks accout age.<br><br>Sextreme Perv: 1TB upload, 1.05 ratio, 50 torrents uploaded, 13 weeks accout age.</td></tr>
+<tr><td colspan="3">Empornium (Emp)<br>Invite forum unlocks with Great Perv user class: 100GB upload, 1.05 ratio, 5 torrents uploaded, 8 weeks account age.<br><br>Sextreme Perv: 1TB upload, 1.05 ratio, 50 torrents uploaded, 13 weeks account age.</td></tr>
 <tr><th scope="row">Emp<span class="arrow">-&gt;</span>AB</td><td>365&nbsp;days</td><td>Sextreme Perv user class. 12 months account age.</td></tr>
 <tr><th scope="row">Emp<span class="arrow">-&gt;</span>Aither</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">Emp<span class="arrow">-&gt;</span>ANT</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -233,7 +236,7 @@
 <tr><th scope="row">NBL<span class="arrow">-&gt;</span>RFX</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">NBL<span class="arrow">-&gt;</span>SM</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">Orpheus (OPS)<br>Invite forum unlocks with Elite user class: 100GB upload, 1.05 ratio, 50 torrents uploaded, 4 weeks accout age.</td></tr>
+<tr><td colspan="3">Orpheus (OPS)<br>Invite forum unlocks with Elite user class: 100GB upload, 1.05 ratio, 50 torrents uploaded, 4 weeks account age.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>ANT</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>BRKS</td><td>365&nbsp;days</td><td>1.51 ratio. 1 year account age.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>CCS</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -282,7 +285,7 @@
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>TT</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>UHDB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">Redacted (RED)<br>Invite forum unlocks with Power User user class: 25GB upload, 0.65 ratio, 5 torrents uploaded, 2 weeks accout age.<br><br>Elite user class: 100GB upload, 0.65 ratio, 50 torrents uploaded, 4 weeks accout age.<br>Torrent Master user class: 500GB upload, 0.65 ratio, 500 torrents uploaded, 8 weeks accout age.</td></tr>
+<tr><td colspan="3">Redacted (RED)<br>Invite forum unlocks with Power User user class: 25GB upload, 0.65 ratio, 5 torrents uploaded, 2 weeks account age.<br><br>Elite user class: 100GB upload, 0.65 ratio, 50 torrents uploaded, 4 weeks account age.<br>Torrent Master user class: 500GB upload, 0.65 ratio, 500 torrents uploaded, 8 weeks account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>AB</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>ANT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>BHD</td><td>28&nbsp;days</td><td>Elite user class.</td></tr>
@@ -314,7 +317,7 @@
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>TSP</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>UHDB</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">U2.dmhy.org (U2)<br>Invite forum unlocks with Power User user class: 50GB download, 1.05 ratio, 4 weeks accout age.<br><br>Elite User user class: 120GB download, 1.55 ratio, 8 weeks accout age.<br>Crazy User user class: 300GB download, 2.05 ratio, 15 weeks accout age.<br>Insane User user class: 500GB download, 2.55 ratio, 25 weeks accout age.</td></tr>
+<tr><td colspan="3">U2.dmhy.org (U2)<br>Invite forum unlocks with Power User user class: 50GB download, 1.05 ratio, 4 weeks account age.<br><br>Elite User user class: 120GB download, 1.55 ratio, 8 weeks account age.<br>Crazy User user class: 300GB download, 2.05 ratio, 15 weeks account age.<br>Insane User user class: 500GB download, 2.55 ratio, 25 weeks account age.</td></tr>
 <tr><th scope="row">U2<span class="arrow">-&gt;</span>Azusa</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">U2<span class="arrow">-&gt;</span>DIC</td><td>105&nbsp;days</td><td>Crazy User user class. 5 music torrent uploads, or 10 other uploads.</td></tr>
 <tr><th scope="row">U2<span class="arrow">-&gt;</span>GMgard</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -329,7 +332,7 @@
 <tr><th scope="row">U2<span class="arrow">-&gt;</span>PTer</td><td>182&nbsp;days</td><td>Insane User user class. 6 months account age.</td></tr>
 <tr><th scope="row">U2<span class="arrow">-&gt;</span>Xinglin</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">UHDBits (UHDB)<br>Invite forum unlocks with Extreme User user class: 300GB upload, 2.0 ratio, 6 snatches, 20 seed/leech ratio, 8 weeks accout age.</td></tr>
+<tr><td colspan="3">UHDBits (UHDB)<br>Invite forum unlocks with Extreme User user class: 300GB upload, 2.0 ratio, 6 snatches, 20 seed/leech ratio, 8 weeks account age.</td></tr>
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>ANT</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>BdC</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>Bit-HDTV</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -348,7 +351,9 @@
 <tr class="spacer"></tr>
 <tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">BrokenStones (BRKS)<br>Invite forum unlocks with Power User user class: 50GB upload, 1.05 ratio, 1 torrent uploaded.<br><br>Elite User user class: 75GB upload, 1.05 ratio, 10 torrents uploaded.</td></tr><tr class="spacer"></tr>
+<tr><td colspan="3">BrokenStones (BRKS)<br>Invite forum unlocks with Power User user class: 50GB upload, 1.05 ratio, 1 torrent uploaded.<br><br>Elite User user class: 75GB upload, 1.05 ratio, 10 torrents uploaded.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">ABTorrents (ABT)<br>No invite forum.</td></tr><tr class="spacer"></tr>
 </table>
 </body>
 </html>
