--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 <th scope="col">Additional&nbsp;information</th>
 </tr>
 <tr><td colspan="3">AnimeBytes (AB)<br>Invite forum unlocks with Power User user class: 25GB upload, 0.7 ratio, 10 torrents uploaded, 2 weeks account age.<br><br>Torrent Master user class: 500GB upload, 0.9 ratio, 100 torrents uploaded, 90 days account age.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>ACM</td><td>14&nbsp;days</td><td>4TB upload. 6 months account age.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>Aither</td><td>14&nbsp;days</td><td>3 months account age.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>ACM</td><td>180&nbsp;days</td><td>4TB upload. 6 months account age.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>Aither</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>ANT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>BBT</td><td>14&nbsp;days</td><td>6 months account age. Seeding at least half of your snatched torrents.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>BBT</td><td>180&nbsp;days</td><td>6 months account age. Seeding at least half of your snatched torrents.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>CCS</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>D3</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>DIC</td><td>14&nbsp;days</td><td>10 music uploads, or 15 other uploads.</td></tr>
@@ -175,6 +175,7 @@
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>Emp</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>EB</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>FF</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>iAnon</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>MAM</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>MTV</td><td>180&nbsp;days</td><td>1.5 ratio. 6 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>NBL</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -286,10 +287,12 @@
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>UHDB</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">Redacted (RED)<br>Invite forum unlocks with Power User user class: 25GB upload, 0.65 ratio, 5 torrents uploaded, 2 weeks account age.<br><br>Elite user class: 100GB upload, 0.65 ratio, 50 torrents uploaded, 4 weeks account age.<br>Torrent Master user class: 500GB upload, 0.65 ratio, 500 torrents uploaded, 8 weeks account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>Aither</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>AB</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>ANT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>BHD</td><td>28&nbsp;days</td><td>Elite user class.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>BLU</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>BBT</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>BHD</td><td>180&nbsp;days</td><td>Elite user class. 6 months account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>BLU</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>BdC</td><td>120&nbsp;days</td><td>4 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>BRKS</td><td>365&nbsp;days</td><td>Elite user class. 1.51 ratio. 1 year account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>CGP</td><td>180&nbsp;days</td><td>1.0 ratio. 6 months account age.</td></tr>
@@ -300,6 +303,7 @@
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>GGn</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>GPW</td><td>28&nbsp;days</td><td>4 weeks account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>HDB</td><td>365&nbsp;days</td><td>Torrent Master user class. 1 year account age.<br>Additional requirements for Chinese users: 2 years account age. Either 2 other tracker profiles, or register with the same username as RED.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>LB</td><td>14&nbsp;days</td><td>1 other tracker profile.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>MAM</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>MTV</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
@@ -308,13 +312,13 @@
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>PTN</td><td>14&nbsp;days</td><td>Other tracker profiles.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>Torrent Master user class. 1 year account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>PxHD</td><td>14&nbsp;days</td><td>Elite user class. 3 other tracker profile with 6 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>RTT</td><td>14&nbsp;days</td><td>3 other tracker profiles. 6 months account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>RTT</td><td>365&nbsp;days</td><td>2 other tracker profiles. 1 year account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>SC</td><td>14&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>SM</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>SceneHD</td><td>14&nbsp;days</td><td>5 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>TLFB</td><td>14&nbsp;days</td><td>3 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>TG</td><td>14&nbsp;days</td><td>1.05 ratio. 6 months account age. 3 other tracker profile with 6 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>TSP</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>SceneHD</td><td>150&nbsp;days</td><td>5 months account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>TLFB</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>TG</td><td>180&nbsp;days</td><td>1.05 ratio. 6 months account age. 3 other tracker profile with 6 months account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>TS</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>UHDB</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">U2.dmhy.org (U2)<br>Invite forum unlocks with Power User user class: 50GB download, 1.05 ratio, 4 weeks account age.<br><br>Elite User user class: 120GB download, 1.55 ratio, 8 weeks account age.<br>Crazy User user class: 300GB download, 2.05 ratio, 15 weeks account age.<br>Insane User user class: 500GB download, 2.55 ratio, 25 weeks account age.</td></tr>
